[Bug #164927648] Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -16,6 +16,11 @@
   --bodyFontFamilyFallback: sans-serif;
   --limeColor: lime;
 }
+html, body{
+  width: 100%;
+  margin: 0;
+  overflow-x: hidden;
+}
 body {
   min-width: 635px !important;
   font-size: 1em;
